--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ html{
 }
 
 body{
-    background-color: #f6f5f5;
+    background-color: #e3e7eb;
    
 }
 
@@ -35,7 +35,7 @@ header{
     align-items: center;
     height: 3.5em;
     z-index: 100;
-    transition: background-color .4s linear;
+    transition: background-color .3s linear;
 }
 .scrolled{
     background-color: #28527a;
@@ -45,7 +45,7 @@ header{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    transition: transform .5s ease-out;
+    transition: transform .3s ease-out;
 }
 
 .nb-logo{
@@ -97,8 +97,6 @@ header{
 
     header{
         flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
         height: 3em;
     }
     .nb-logo{
@@ -109,12 +107,13 @@ header{
     .nb{ 
         position: relative;
         left: 45%;
-        top: 2.4em;
+        top: 3em;
+        padding: 10px;
         text-align: start;
         transform-origin: right;
         transform: scale(0,1);
         width: 100%;
-        background-color: #1687a7;
+        background-color: #28527a;
     }
     .nb-links-container .nb-ul{
         transition: opacity .15s ease;
@@ -128,7 +127,7 @@ header{
     } 
 
     .nb-toggle:checked ~ .nb .nb-links-container .nb-ul {
-        transition: opacity .25s ease .2s;
+        transition: opacity .3s ease .2s;
         opacity: 1;
     }
     .nb-li a:hover{
@@ -142,7 +141,7 @@ header{
         display: flex;
         align-items: center;
         justify-content: center;
-        top: 0em;
+        top: 0;
         right: 0;
         width: 3em;
         height: 2.9em;
@@ -164,17 +163,15 @@ header{
         position: relative;
     }
 
-    .toggle-button::before,
-    .toggle-button::after{
+    .toggle-button::before{
         content: '';
         position: absolute;
-    }
-
-    .toggle-button::before{
         bottom: 9px;
     }
 
     .toggle-button::after{
+        content: '';
+        position: absolute;
         top: 9px;
     }
 } 
@@ -186,7 +183,7 @@ header{
     background-image: url('Assets/Blue\ Background.jpg');
     background-position: center;
     background-size: cover;
-    color: white;
+    color: #f6f5f5;
     height: 440px;
     padding: 30px 20px 0 20px;
     text-align: center;
@@ -201,7 +198,7 @@ header{
     border-radius: 50%;
     height: 200px;
     width: 220px;
-    transform: scale(0.95);
+    transform: scale(0.9);
     object-fit: cover;
     object-position: top;
     transition: transform .2s ease, border .4s ease-in;
@@ -217,7 +214,8 @@ header{
     width: 10em;
     white-space: nowrap;
     border: none;
-    box-shadow: 0 0 4px #1687a7;
+    border-radius: 100px;
+    box-shadow: 0 0 2px #28527a;
     background-color: #f6f5f5;
     color: #276678;
 }
@@ -233,7 +231,7 @@ header{
 
 .logos{
     position: absolute;
-    left:50%;
+    left: 50%;
     margin-left: -50%;
     bottom: -40px;
     width: 100%;
@@ -244,10 +242,10 @@ header{
     width: 60px;
     height: 60px;
     background-color: #eee;
-    box-shadow: 0 0 4px #1687a7;
+    box-shadow: 0 0 3px #1687a7;
     border-radius: 50%;
     margin: 0 10px;
-    transition: background-color .3s ease;
+    transition: filter .3s ease;
 }
 
 .logo-ul .logo-li:hover{
@@ -257,9 +255,8 @@ header{
 
 .logo-ul .logo-li .logo-a{
     display: block;
-    margin-top: 10px;
+    margin-top: 17%;
     font-size: 30px;
-    height: 90%;
     color: #147c99;
 }
 
@@ -267,10 +264,10 @@ header{
 /*info and skills*/
 .container{
     padding: 30px;
-    background-color: #fff;
+    background-color: #f6f5f5;
     border:none;
     border-radius: 3px;
-    box-shadow: 0 0 4px #1688a723;
+    box-shadow: 0 0 3px #1688a723;
     margin-bottom: 50px;
     opacity: 0;
     transform: translateY(100px);
@@ -298,6 +295,10 @@ header{
 
 .progress-bar{
     background-color: #1687a7 ;
+}
+
+.table{
+    border-bottom: 1px solid #ddd;
 }
 
 .target{
@@ -447,12 +448,14 @@ img{
 }
 
 .contact-button{
+    border-radius: 6px;
     background-color: #1687a7;
     color: #f6f5f5;
 }
 
 .contact-button:hover{
     background-color: #126d86;
+    color: #f6f5f5;
 }
 
 .contact-inputs{
@@ -462,6 +465,7 @@ img{
 
 input{
     display: block;
+    background-color: transparent;
     border-radius: 100px;
     border: 1px solid #bbb;
     padding: 3px 3px 3px 40px;
@@ -481,6 +485,7 @@ input:hover{
 
 textarea{
     display: block;
+    background-color: transparent;
     width: 70%;
     border: none;
     border-bottom: 1px solid #bbb;
