--- a/stylesheet.css
+++ b/stylesheet.css
@@ -291,10 +291,13 @@ header{
 .progress{
     margin: 20px;
     background-color: #d3e0ea;
+    border-radius: 100px;
+    border: 2px solid #d3e0ea;
 }
 
 .progress-bar{
-    background-color: #1687a7 ;
+    background-color: #1687a7;
+    border-radius: 100px;
 }
 
 .table{
@@ -420,18 +423,20 @@ img{
 
 @media (max-width: 577px){
     .portofolio-container{
-        padding: 0;
+        padding:0;
         flex-direction: column;
         width: 95%;
         height: 110%;
     }
 
     .portofolio-title{
+        
         position: relative;
         width: 100%;
         height: 8em;
         border-right: none;
         border-bottom: 2px solid #276678;
+        border-radius: 3px 3px 0 0;
     }
 
     .portofolio-description{
