--- a/stylesheet.css
+++ b/stylesheet.css
@@ -260,6 +260,10 @@ header{
     color: #147c99;
 }
 
+.shift-left{
+    margin-right: 2px;
+}
+
 /***********************************************************************************************************/
 /*info and skills*/
 .container{
