--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 3.5em;
+    height: 60px;
     z-index: 100;
     transition: background-color .3s linear;
 }
@@ -49,11 +49,11 @@ header{
 }
 
 .nb-logo{
-    font-size: 2rem;
+    font-size: 40px;
     user-select: none;
     color: #f6f5f5;
     white-space: nowrap;
-    margin: 0;
+    margin: 0 0 5px 0;
 }
 
 .nb-links-container .nb-ul{
@@ -97,17 +97,17 @@ header{
 
     header{
         flex-direction: column;
-        height: 3em;
+        height: 50px;
     }
     .nb-logo{
         position: absolute;
-        left:30px;
-        top:5px;
+        left: 20px;
+        top: -2px;
     }
     .nb{ 
         position: relative;
         left: 45%;
-        top: 3em;
+        top: 49px;
         padding: 10px;
         text-align: start;
         transform-origin: right;
@@ -116,7 +116,7 @@ header{
         background-color: #28527a;
     }
     .nb-links-container .nb-ul{
-        transition: opacity .15s ease;
+        transition: opacity .1s ease;
         flex-direction: column;
         opacity: 0;
     }
@@ -201,6 +201,7 @@ header{
     transform: scale(0.9);
     object-fit: cover;
     object-position: top;
+    box-shadow: 0 0 3px #147c99;
     transition: transform .2s ease, border .4s ease-in;
 }
 
