--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,24 +10,18 @@ html{
 
 body{
     background-color: #e3e7eb;
-   
 }
 
 h1{
     font-weight: bold;
     font-size: 48px;
 }
-
-p{
-    font-size: 18x;
-}
 /*******************************************************************************************************************/
 /*NavBar*/
 
 header{
-    padding: 0 30px 0 60px;
     position: fixed;
-    top: 0;
+    padding: 0 30px 0 60px;
     width: 100%;
     background-color: transparent;
     display: flex;
@@ -35,7 +29,7 @@ header{
     align-items: center;
     height: 60px;
     z-index: 100;
-    transition: background-color .3s linear;
+    transition: background-color .2s ease;
 }
 .scrolled{
     background-color: #28527a;
@@ -63,7 +57,7 @@ header{
 }
 
  .nb-li{
-    margin: 0 5px;
+    margin: 4px;
     list-style: none;
 }
 
@@ -71,7 +65,7 @@ header{
     content: '';
     display: block;
     height: 4px;
-    border-radius: 5px;
+    border-radius: 10px;
     width: 100%;
     background-color: #f6f5f5;
     transform: scale(0,1);
@@ -85,7 +79,7 @@ header{
 .nb-links-container .nb-ul .nb-li a{
     display: block;
     text-decoration: none;
-    padding: .7em 2em;
+    padding: 15px 28px;
     color: #f6f5f5;
 }
 
@@ -101,14 +95,13 @@ header{
     }
     .nb-logo{
         position: absolute;
-        left: 20px;
+        left: 4%;
         top: -2px;
     }
     .nb{ 
         position: relative;
         left: 45%;
-        top: 49px;
-        padding: 10px;
+        top: 48px;
         text-align: start;
         transform-origin: right;
         transform: scale(0,1);
@@ -133,8 +126,8 @@ header{
     .nb-li a:hover{
         background-color: #126d86;
     }
-    .nb-li a:hover::after{
-        transform: scale(0,0);
+    .nb-li a::after{
+        display: none;
     }
     .nb-toggle-label {
         position: absolute;
@@ -143,8 +136,8 @@ header{
         justify-content: center;
         top: 0;
         right: 0;
-        width: 3em;
-        height: 2.9em;
+        width: 50px;
+        height: 48px;
     }
 
     .nb-toggle-label:hover{
@@ -154,25 +147,23 @@ header{
     .toggle-button,
     .toggle-button::before,
     .toggle-button::after{
-
+        content: '';
         background-color: #f6f5f5;
-        width: 2em;
-        height: 3px;
-        border-radius: 3px;
+        width: 32px;
+        height: 4px;
+        border-radius: 4px;
         display:block;
         position: relative;
     }
 
     .toggle-button::before{
-        content: '';
         position: absolute;
-        bottom: 9px;
+        bottom: 10px;
     }
 
     .toggle-button::after{
-        content: '';
         position: absolute;
-        top: 9px;
+        top: 10px;
     }
 } 
 /******************************************************************************************************************/
@@ -189,9 +180,9 @@ header{
     text-align: center;
     margin-bottom: 60px;
 }
-@media (max-width: 380px){
+@media (max-width: 403px){
     .container-top{
-        height: 540px;
+        height: 510px;
     }
 }
 .avatar{
@@ -202,7 +193,7 @@ header{
     object-fit: cover;
     object-position: top;
     box-shadow: 0 0 3px #147c99;
-    transition: transform .2s ease, border .4s ease-in;
+    transition: transform .2s ease;
 }
 
 .avatar:hover{
@@ -213,7 +204,6 @@ header{
     padding: 8px;
     margin: 10px 10px;
     width: 10em;
-    white-space: nowrap;
     border: none;
     border-radius: 100px;
     box-shadow: 0 0 2px #28527a;
@@ -497,7 +487,7 @@ input:hover{
 textarea{
     display: block;
     background-color: transparent;
-    width: 70%;
+    width: 18em;
     border: none;
     border-bottom: 1px solid #bbb;
     outline:none;
@@ -514,7 +504,6 @@ textarea:focus{
     bottom: 33px;
     left: 12px;
     color:#1687a7;
-    
 }
 
 .contact-title{
